--- a/HTML/intex.html
+++ b/HTML/intex.html
@@ -10,5 +10,9 @@
  <h2>   Day 2 </h2>
  <h3> Day 3</h3>
  <button> Click here </button>
+ <a href="https://www.w3schools.com">This is a Link</a>
+ <img src="https://www.w3schools.com/html/w3schools.jpg" alt="W3Schools.com" width="104" height="152">
+ <p style="color: rgb(35, 113, 66);">this is a paragarph</p>
+
 </body>
 </html>
